--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     </label>
                 </div>
 				<p class="text-center" ng-show="loading">
-					<span class="fa fa-spinner fa-spin fa-3x"></span>
+					<span class="fa fa-circle-o-notch fa-spin fa-2x"></span>
 				</p>
 
             </div>
