--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                     </label>
                 </div>
 				<p class="text-center" ng-show="loading">
-					<i class="fa fa-circle-o-notch fa-spin"></i>
+					<i class="fa fa-cog fa-spin fa-3x"></i>
 				</p>
 
             </div>
