--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <!-- createToDo() WILL CREATE NEW TODOS -->
-                    <button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add</button>
+                    <button type="submit" class="btn btn-warning btn-lg" ng-click="createTodo()">&nbsp;&nbsp;Add&nbsp;&nbsp;</button>
                 </form>
             </div>
         </div>
